--- a/CNN model build.ipynb
+++ b/CNN model build.ipynb
@@ -416,31 +416,31 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "92/92 [==============================] - 11s 98ms/step - loss: 0.7331 - accuracy: 0.7068 - val_loss: 0.3740 - val_accuracy: 0.8435\n",
+      "92/92 [==============================] - 14s 135ms/step - loss: 0.5539 - accuracy: 0.7498 - val_loss: 0.3633 - val_accuracy: 0.8511\n",
       "Epoch 2/10\n",
-      "92/92 [==============================] - 8s 90ms/step - loss: 0.2496 - accuracy: 0.9019 - val_loss: 0.2819 - val_accuracy: 0.9122\n",
+      "92/92 [==============================] - 14s 150ms/step - loss: 0.2044 - accuracy: 0.9248 - val_loss: 0.2053 - val_accuracy: 0.9580\n",
       "Epoch 3/10\n",
-      "92/92 [==============================] - 8s 92ms/step - loss: 0.1321 - accuracy: 0.9576 - val_loss: 0.1901 - val_accuracy: 0.9695\n",
+      "92/92 [==============================] - 14s 158ms/step - loss: 0.0854 - accuracy: 0.9764 - val_loss: 0.1619 - val_accuracy: 0.9656\n",
       "Epoch 4/10\n",
-      "92/92 [==============================] - 8s 82ms/step - loss: 0.0616 - accuracy: 0.9856 - val_loss: 0.1899 - val_accuracy: 0.9656\n",
+      "92/92 [==============================] - 12s 132ms/step - loss: 0.0410 - accuracy: 0.9925 - val_loss: 0.1696 - val_accuracy: 0.9733\n",
       "Epoch 5/10\n",
-      "92/92 [==============================] - 8s 85ms/step - loss: 0.0584 - accuracy: 0.9846 - val_loss: 0.1938 - val_accuracy: 0.9695\n",
+      "92/92 [==============================] - 13s 136ms/step - loss: 0.0158 - accuracy: 0.9990 - val_loss: 0.1532 - val_accuracy: 0.9695\n",
       "Epoch 6/10\n",
-      "92/92 [==============================] - 8s 89ms/step - loss: 0.0312 - accuracy: 0.9952 - val_loss: 0.1975 - val_accuracy: 0.9771\n",
+      "92/92 [==============================] - 14s 147ms/step - loss: 0.0072 - accuracy: 0.9997 - val_loss: 0.1833 - val_accuracy: 0.9695\n",
       "Epoch 7/10\n",
-      "92/92 [==============================] - 10s 107ms/step - loss: 0.0104 - accuracy: 0.9997 - val_loss: 0.2111 - val_accuracy: 0.9771\n",
+      "92/92 [==============================] - 13s 144ms/step - loss: 0.0044 - accuracy: 1.0000 - val_loss: 0.1732 - val_accuracy: 0.9733\n",
       "Epoch 8/10\n",
-      "92/92 [==============================] - 9s 102ms/step - loss: 0.0054 - accuracy: 1.0000 - val_loss: 0.2238 - val_accuracy: 0.9771\n",
+      "92/92 [==============================] - 11s 116ms/step - loss: 0.0023 - accuracy: 1.0000 - val_loss: 0.1917 - val_accuracy: 0.9695\n",
       "Epoch 9/10\n",
-      "92/92 [==============================] - 8s 88ms/step - loss: 0.0039 - accuracy: 1.0000 - val_loss: 0.2505 - val_accuracy: 0.9733\n",
+      "92/92 [==============================] - 14s 158ms/step - loss: 0.0015 - accuracy: 1.0000 - val_loss: 0.1983 - val_accuracy: 0.9733\n",
       "Epoch 10/10\n",
-      "92/92 [==============================] - 8s 88ms/step - loss: 0.0027 - accuracy: 1.0000 - val_loss: 0.2389 - val_accuracy: 0.9771\n"
+      "92/92 [==============================] - 15s 168ms/step - loss: 0.0013 - accuracy: 1.0000 - val_loss: 0.1920 - val_accuracy: 0.9695\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x250ed2bd3c0>"
+       "<keras.callbacks.History at 0x242a9de5270>"
       ]
      },
      "execution_count": 15,
@@ -492,10 +492,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70/70 [==============================] - 16s 229ms/step - loss: 0.0025 - accuracy: 1.0000\n",
-      "Training Loss: 0.0024889539927244186\n",
+      "70/70 [==============================] - 21s 293ms/step - loss: 0.0012 - accuracy: 1.0000\n",
+      "Training Loss: 0.001211111550219357\n",
       "Training Accuracy: 1.0\n",
-      "70/70 [==============================] - 16s 228ms/step\n",
+      "70/70 [==============================] - 17s 248ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00       762\n",
@@ -529,18 +529,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9/9 [==============================] - 2s 236ms/step - loss: 0.2389 - accuracy: 0.9771\n",
-      "Validation Loss: 0.2389112412929535\n",
-      "Validation Accuracy: 0.9770992398262024\n",
-      "9/9 [==============================] - 2s 226ms/step\n",
+      "9/9 [==============================] - 2s 228ms/step - loss: 0.1920 - accuracy: 0.9695\n",
+      "Validation Loss: 0.1920134723186493\n",
+      "Validation Accuracy: 0.9694656729698181\n",
+      "9/9 [==============================] - 2s 249ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.96      0.98       129\n",
-      "           1       0.96      0.99      0.98       133\n",
+      "           0       0.98      0.95      0.97       129\n",
+      "           1       0.96      0.98      0.97       133\n",
       "\n",
-      "    accuracy                           0.98       262\n",
-      "   macro avg       0.98      0.98      0.98       262\n",
-      "weighted avg       0.98      0.98      0.98       262\n",
+      "    accuracy                           0.97       262\n",
+      "   macro avg       0.97      0.97      0.97       262\n",
+      "weighted avg       0.97      0.97      0.97       262\n",
       "\n"
      ]
     }
@@ -594,18 +594,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9/9 [==============================] - 2s 225ms/step - loss: 0.2389 - accuracy: 0.9771\n",
-      "Testing Loss: 0.2389112412929535\n",
-      "Testing Accuracy: 0.9770992398262024\n",
-      "9/9 [==============================] - 2s 198ms/step\n",
+      "9/9 [==============================] - 2s 245ms/step - loss: 0.1920 - accuracy: 0.9695\n",
+      "Testing Loss: 0.1920134723186493\n",
+      "Testing Accuracy: 0.9694656729698181\n",
+      "9/9 [==============================] - 2s 230ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.96      0.98       129\n",
-      "           1       0.96      0.99      0.98       133\n",
+      "           0       0.98      0.95      0.97       129\n",
+      "           1       0.96      0.98      0.97       133\n",
       "\n",
-      "    accuracy                           0.98       262\n",
-      "   macro avg       0.98      0.98      0.98       262\n",
-      "weighted avg       0.98      0.98      0.98       262\n",
+      "    accuracy                           0.97       262\n",
+      "   macro avg       0.97      0.97      0.97       262\n",
+      "weighted avg       0.97      0.97      0.97       262\n",
       "\n"
      ]
     }
@@ -632,7 +632,7 @@
      "output_type": "stream",
      "text": [
       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1]\n"
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1]\n"
      ]
     }
    ],
@@ -647,8 +647,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.preprocessing import image\n",
-    "import numpy as np"
+    "from tensorflow.keras.preprocessing import image"
    ]
   },
   {
@@ -666,7 +665,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 92ms/step\n",
+      "1/1 [==============================] - 0s 109ms/step\n",
       "[[0.]]\n",
       "Legal Ball\n"
      ]
@@ -706,7 +705,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
       "[[0.]]\n",
       "Legal Ball\n"
      ]
@@ -740,7 +739,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 44ms/step\n",
       "[[1.]]\n",
       "No Ball\n"
      ]
@@ -796,18 +795,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/3 [==============================] - 0s 73ms/step - loss: 1.8324 - accuracy: 0.7143\n",
-      "Testing Loss: 1.8324109315872192\n",
-      "Testing Accuracy: 0.7142857313156128\n",
-      "3/3 [==============================] - 0s 83ms/step\n",
+      "3/3 [==============================] - 1s 112ms/step - loss: 1.7803 - accuracy: 0.5974\n",
+      "Testing Loss: 1.780301809310913\n",
+      "Testing Accuracy: 0.5974025726318359\n",
+      "3/3 [==============================] - 1s 102ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.56      0.60      0.58        25\n",
-      "           1       0.80      0.77      0.78        52\n",
+      "           0       0.41      0.52      0.46        25\n",
+      "           1       0.73      0.63      0.68        52\n",
       "\n",
-      "    accuracy                           0.71        77\n",
-      "   macro avg       0.68      0.68      0.68        77\n",
-      "weighted avg       0.72      0.71      0.72        77\n",
+      "    accuracy                           0.60        77\n",
+      "   macro avg       0.57      0.58      0.57        77\n",
+      "weighted avg       0.63      0.60      0.61        77\n",
       "\n"
      ]
     }
@@ -855,10 +854,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 90ms/step - loss: 0.0041 - accuracy: 1.0000\n",
-      "Testing Loss: 0.004129423759877682\n",
+      "1/1 [==============================] - 0s 82ms/step - loss: 0.0275 - accuracy: 1.0000\n",
+      "Testing Loss: 0.027538176625967026\n",
       "Testing Accuracy: 1.0\n",
-      "1/1 [==============================] - 0s 109ms/step\n",
+      "1/1 [==============================] - 0s 121ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00         5\n",
