--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -336,7 +336,7 @@
    },
    "outputs": [],
    "source": [
-    "cnn.add(tf.keras.layers.Conv2D(filters=32, kernel_size=3, activation='relu', input_shape=[64, 64, 3]))\n",
+    "cnn.add(tf.keras.layers.Conv2D(filters=128, kernel_size=3, activation='relu', input_shape=[64, 64, 3]))\n",
     "cnn.add(tf.keras.layers.MaxPool2D(pool_size=2, strides=2))"
    ]
   },
@@ -348,7 +348,7 @@
    },
    "outputs": [],
    "source": [
-    "cnn.add(tf.keras.layers.Conv2D(filters=32, kernel_size=3, activation='relu'))\n",
+    "cnn.add(tf.keras.layers.Conv2D(filters=64, kernel_size=3, activation='relu'))\n",
     "cnn.add(tf.keras.layers.MaxPool2D(pool_size=2, strides=2))"
    ]
   },
@@ -378,25 +378,25 @@
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d (Conv2D)             (None, 62, 62, 32)        896       \n",
+      " conv2d (Conv2D)             (None, 62, 62, 128)       3584      \n",
       "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 31, 31, 32)       0         \n",
+      " max_pooling2d (MaxPooling2D  (None, 31, 31, 128)      0         \n",
       " )                                                               \n",
       "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 29, 29, 32)        9248      \n",
+      " conv2d_1 (Conv2D)           (None, 29, 29, 64)        73792     \n",
       "                                                                 \n",
-      " max_pooling2d_1 (MaxPooling  (None, 14, 14, 32)       0         \n",
+      " max_pooling2d_1 (MaxPooling  (None, 14, 14, 64)       0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 6272)              0         \n",
+      " flatten (Flatten)           (None, 12544)             0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 128)               802944    \n",
+      " dense (Dense)               (None, 128)               1605760   \n",
       "                                                                 \n",
       " dense_1 (Dense)             (None, 1)                 129       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 813,217\n",
-      "Trainable params: 813,217\n",
+      "Total params: 1,683,265\n",
+      "Trainable params: 1,683,265\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -433,31 +433,31 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "92/92 [==============================] - 9s 89ms/step - loss: 0.5859 - accuracy: 0.6774 - val_loss: 0.4751 - val_accuracy: 0.7710\n",
+      "92/92 [==============================] - 14s 142ms/step - loss: 0.5944 - accuracy: 0.6470 - val_loss: 0.5358 - val_accuracy: 0.7595\n",
       "Epoch 2/10\n",
-      "92/92 [==============================] - 6s 68ms/step - loss: 0.3577 - accuracy: 0.8401 - val_loss: 0.3147 - val_accuracy: 0.9122\n",
+      "92/92 [==============================] - 16s 175ms/step - loss: 0.3989 - accuracy: 0.8113 - val_loss: 0.4818 - val_accuracy: 0.8168\n",
       "Epoch 3/10\n",
-      "92/92 [==============================] - 7s 75ms/step - loss: 0.2139 - accuracy: 0.9170 - val_loss: 0.3498 - val_accuracy: 0.9046\n",
+      "92/92 [==============================] - 18s 192ms/step - loss: 0.2513 - accuracy: 0.8944 - val_loss: 0.4281 - val_accuracy: 0.8397\n",
       "Epoch 4/10\n",
-      "92/92 [==============================] - 8s 84ms/step - loss: 0.1179 - accuracy: 0.9552 - val_loss: 0.2630 - val_accuracy: 0.9466\n",
+      "92/92 [==============================] - 20s 216ms/step - loss: 0.1678 - accuracy: 0.9327 - val_loss: 0.3450 - val_accuracy: 0.9160\n",
       "Epoch 5/10\n",
-      "92/92 [==============================] - 7s 73ms/step - loss: 0.0854 - accuracy: 0.9686 - val_loss: 0.2815 - val_accuracy: 0.9504\n",
+      "92/92 [==============================] - 18s 194ms/step - loss: 0.1208 - accuracy: 0.9545 - val_loss: 0.3455 - val_accuracy: 0.9237\n",
       "Epoch 6/10\n",
-      "92/92 [==============================] - 7s 79ms/step - loss: 0.0505 - accuracy: 0.9853 - val_loss: 0.3961 - val_accuracy: 0.9427\n",
+      "92/92 [==============================] - 17s 191ms/step - loss: 0.0913 - accuracy: 0.9668 - val_loss: 0.2896 - val_accuracy: 0.9618\n",
       "Epoch 7/10\n",
-      "92/92 [==============================] - 8s 86ms/step - loss: 0.0477 - accuracy: 0.9853 - val_loss: 0.3769 - val_accuracy: 0.9733\n",
+      "92/92 [==============================] - 20s 214ms/step - loss: 0.0539 - accuracy: 0.9815 - val_loss: 0.3955 - val_accuracy: 0.9580\n",
       "Epoch 8/10\n",
-      "92/92 [==============================] - 10s 110ms/step - loss: 0.0181 - accuracy: 0.9966 - val_loss: 0.3160 - val_accuracy: 0.9504\n",
+      "92/92 [==============================] - 16s 175ms/step - loss: 0.0424 - accuracy: 0.9860 - val_loss: 0.4443 - val_accuracy: 0.9542\n",
       "Epoch 9/10\n",
-      "92/92 [==============================] - 9s 100ms/step - loss: 0.0143 - accuracy: 0.9973 - val_loss: 0.3333 - val_accuracy: 0.9733\n",
+      "92/92 [==============================] - 20s 214ms/step - loss: 0.0283 - accuracy: 0.9901 - val_loss: 0.4599 - val_accuracy: 0.9771\n",
       "Epoch 10/10\n",
-      "92/92 [==============================] - 8s 84ms/step - loss: 0.0065 - accuracy: 0.9997 - val_loss: 0.4141 - val_accuracy: 0.9771\n"
+      "92/92 [==============================] - 14s 147ms/step - loss: 0.0184 - accuracy: 0.9945 - val_loss: 0.4740 - val_accuracy: 0.9695\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1652fd75300>"
+       "<keras.callbacks.History at 0x1f73488fd30>"
       ]
      },
      "execution_count": 16,
@@ -505,13 +505,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70/70 [==============================] - 18s 251ms/step - loss: 0.0031 - accuracy: 1.0000\n",
-      "Training Loss: 0.0030798546504229307\n",
-      "Training Accuracy: 1.0\n",
-      "70/70 [==============================] - 16s 228ms/step\n",
+      "70/70 [==============================] - 18s 249ms/step - loss: 0.0082 - accuracy: 0.9973\n",
+      "Training Loss: 0.008211841806769371\n",
+      "Training Accuracy: 0.9973033666610718\n",
+      "70/70 [==============================] - 17s 235ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00       762\n",
+      "           0       1.00      0.99      1.00       762\n",
       "           1       1.00      1.00      1.00      1463\n",
       "\n",
       "    accuracy                           1.00      2225\n",
@@ -542,18 +542,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9/9 [==============================] - 2s 226ms/step - loss: 0.4141 - accuracy: 0.9771\n",
-      "Validation Loss: 0.4141470193862915\n",
-      "Validation Accuracy: 0.9770992398262024\n",
-      "9/9 [==============================] - 2s 233ms/step\n",
+      "9/9 [==============================] - 2s 204ms/step - loss: 0.4740 - accuracy: 0.9695\n",
+      "Validation Loss: 0.4739968776702881\n",
+      "Validation Accuracy: 0.9694656729698181\n",
+      "9/9 [==============================] - 2s 207ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.96      0.98       129\n",
-      "           1       0.96      0.99      0.98       133\n",
+      "           0       0.99      0.95      0.97       129\n",
+      "           1       0.95      0.99      0.97       133\n",
       "\n",
-      "    accuracy                           0.98       262\n",
-      "   macro avg       0.98      0.98      0.98       262\n",
-      "weighted avg       0.98      0.98      0.98       262\n",
+      "    accuracy                           0.97       262\n",
+      "   macro avg       0.97      0.97      0.97       262\n",
+      "weighted avg       0.97      0.97      0.97       262\n",
       "\n"
      ]
     }
@@ -601,18 +601,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9/9 [==============================] - 2s 231ms/step - loss: 0.4141 - accuracy: 0.9771\n",
-      "Testing Loss: 0.4141470193862915\n",
-      "Testing Accuracy: 0.9770992398262024\n",
-      "9/9 [==============================] - 2s 226ms/step\n",
+      "9/9 [==============================] - 2s 204ms/step - loss: 0.4740 - accuracy: 0.9695\n",
+      "Testing Loss: 0.4739968776702881\n",
+      "Testing Accuracy: 0.9694656729698181\n",
+      "9/9 [==============================] - 2s 204ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.96      0.98       129\n",
-      "           1       0.96      0.99      0.98       133\n",
+      "           0       0.99      0.95      0.97       129\n",
+      "           1       0.95      0.99      0.97       133\n",
       "\n",
-      "    accuracy                           0.98       262\n",
-      "   macro avg       0.98      0.98      0.98       262\n",
-      "weighted avg       0.98      0.98      0.98       262\n",
+      "    accuracy                           0.97       262\n",
+      "   macro avg       0.97      0.97      0.97       262\n",
+      "weighted avg       0.97      0.97      0.97       262\n",
       "\n"
      ]
     }
@@ -639,7 +639,7 @@
      "output_type": "stream",
      "text": [
       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1]\n"
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
@@ -654,8 +654,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.preprocessing import image\n",
-    "import numpy as np"
+    "from tensorflow.keras.preprocessing import image"
    ]
   },
   {
@@ -667,7 +666,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 185ms/step\n",
+      "1/1 [==============================] - 0s 102ms/step\n",
       "[[0.]]\n",
       "Legal Ball\n"
      ]
@@ -701,7 +700,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
       "[[1.]]\n",
       "No Ball\n"
      ]
@@ -735,7 +734,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
       "[[1.]]\n",
       "No Ball\n"
      ]
@@ -791,18 +790,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/3 [==============================] - 1s 94ms/step - loss: 1.7590 - accuracy: 0.7143\n",
-      "Testing Loss: 1.7590413093566895\n",
+      "3/3 [==============================] - 0s 79ms/step - loss: 2.1411 - accuracy: 0.7143\n",
+      "Testing Loss: 2.14105486869812\n",
       "Testing Accuracy: 0.7142857313156128\n",
-      "3/3 [==============================] - 1s 81ms/step\n",
+      "3/3 [==============================] - 0s 69ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.56      0.56      0.56        25\n",
-      "           1       0.79      0.79      0.79        52\n",
+      "           0       0.58      0.44      0.50        25\n",
+      "           1       0.76      0.85      0.80        52\n",
       "\n",
       "    accuracy                           0.71        77\n",
-      "   macro avg       0.67      0.67      0.67        77\n",
-      "weighted avg       0.71      0.71      0.71        77\n",
+      "   macro avg       0.67      0.64      0.65        77\n",
+      "weighted avg       0.70      0.71      0.70        77\n",
       "\n"
      ]
     }
@@ -850,10 +849,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 114ms/step - loss: 0.0105 - accuracy: 1.0000\n",
-      "Testing Loss: 0.010458553209900856\n",
+      "1/1 [==============================] - 0s 94ms/step - loss: 0.0021 - accuracy: 1.0000\n",
+      "Testing Loss: 0.0021299386862665415\n",
       "Testing Accuracy: 1.0\n",
-      "1/1 [==============================] - 0s 109ms/step\n",
+      "1/1 [==============================] - 0s 120ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00         5\n",
